# hyprwinview

./: .clang-tidy  .gitignore  CMakeLists.txt  README.md  flake.nix  justfile
.github/workflows/: nix-build.yml
src/: AppIcon.cpp  AppIcon.hpp  WinviewPassElement.cpp  WinviewPassElement.hpp  globals.hpp  main.cpp  overview.cpp  overview.hpp
tools/: repro-missed-first-overview-tab.sh
